setting. java 25 적용